# fxnz

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum  server.go
config/: config.go
database/: database.go
links/: links.go
migration/src/: lib.rs  m20230110_123833_create_user.rs  m20230110_123842_create_link.rs
model/: link.rs  mod.rs  prelude.rs  user.rs
models/: link.go  user.go
routes/: api.go  routes.go
src/: database.rs  lib.rs  main.rs  routes.rs
src/model/: link.rs  user.rs
src/routes/: index.rs
src/utils/: url.rs
users/: users.go
