[package]
name = "hanzlol"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.6.1"
dotenvy = "0.15.6"
sea-orm = { version = "0.10.6", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
migration = { path = "migration" } 